fix nav menu position and spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -144,7 +144,7 @@ nav {
   nav {
   display: block;
   position: absolute;
-  top: 20px;
+  top: 40px;
   right: 0;
 }
 
@@ -152,7 +152,7 @@ nav a {
   color: #d4d4d4;
   font-size: 2rem;
   text-decoration: none;
-  padding-right: 25px;
+  margin-right: 30px;
 }
 
 nav a:hover {
